Add options methods
