# src/Controller/FileController.php
@@ -244,4 +244,17 @@ class FileController extends AbstractController
 
     }
 
+    #[Route('/files', name: 'options_files', methods: ['OPTIONS'])]
+    public function optionsFiles(): Response
+    {
+        $response = new Response(null, 200, [
+            'Access-Control-Allow-Origin' => '*',
+            'Access-Control-Allow-Methods' => 'GET, POST, PUT, DELETE, OPTIONS',
+            'Access-Control-Allow-Headers' => 'Content-Type, Authorization',
+        ]);
+
+        return $response->send();
+
+    }
+
 }
