# src/Controller/UserController.php
@@ -46,4 +46,17 @@ class UserController extends AbstractController
 
     }
 
+    #[Route('/users', name: 'options_users', methods: ['OPTIONS'])]
+    public function optionsUsers(): Response
+    {
+        $response = new Response(null, 200, [
+            'Access-Control-Allow-Origin' => '*',
+            'Access-Control-Allow-Methods' => 'GET, POST, DELETE, OPTIONS',
+            'Access-Control-Allow-Headers' => 'Content-Type, Authorization',
+        ]);
+
+        return $response->send();
+
+    }
+
 }
